# MLTest

./: .gitignore  DeepAR Tutorial.ipynb  Idea - MLP to Autoregressive.ipynb  Idea - MLP to DeepAR.ipynb  Idea - MLP to RNN.ipynb  Idea - MLP to TFT (sweep).ipynb  Idea - MLP to TFT.ipynb  MLP2.ipynb  README.md
new/optimizers_curse/: Cargo.toml  README.md  distribution.parquet  pq_plot.py
new/optimizers_curse/src/: main.rs
new/stock_forecasting/: .gitignore  LSTM.ipynb  LSTM_Seq2Seq.ipynb  LSTM_Seq2Seq_Comp.ipynb  generate.py  helper.py  mlp.ipynb  pyproject.toml
new/stock_forecasting/data/: close.parquet
new/sum_tree/: Cargo.toml  README.md  pq_plot.py  result.parquet
new/sum_tree/src/: main.rs
old/: Idea - MLP to DeepAR.ipynb  Idea - MLP to RNN.ipynb  Idea - MLP to TFT.ipynb  MLP.ipynb
