[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "axect@outlook.kr"},
]
dependencies = [
    "torch>=2.0.1",
    "lightning>=2.0.7",
    "numpy>=1.25.2",
    "pandas>=2.0.3",
    "finance-datareader>=0.9.50",
    "notebook>=7.0.2",
    "setuptools>=68.1.2",
    "matplotlib>=3.7.2",
    "pyarrow>=12.0.1",
    "wandb>=0.15.8",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

